# Secondary-memory-simple-RTree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  runner.sh
cmake/FindBoost/: FindBoost.cmake
src/: BoostRTreeComparison.cpp  CMakeLists.txt  ExperimentData.h  Experiments.cpp  Experiments.h  FilenameGenerator.cpp  FilenameGenerator.h  GreeneSplit.cpp  GreeneSplit.h  IOControl.cpp  IOControl.h  LinearSplit.cpp  LinearSplit.h  RTree.cpp  RTree.h  RTreeController.cpp  RTreeController.h  RandomRectangleGenerator.cpp  RandomRectangleGenerator.h  Rectangle.cpp  Rectangle.h  SplitBuilder.cpp  SplitBuilder.h  SplitHeuristic.cpp  SplitHeuristic.h  commontypes.h  main.cpp
test/: AuxTests.cpp  CMakeLists.txt  IOControlTest.cpp  RandomGenerationTest.cpp  SearchTest.cpp
